# AI_Travel_Planner

./: .gitignore  DEPLOYMENT.md  Pipfile  README.md  main.py
backend/: .env.example  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt
backend/travel_planner/agent/: agent_workflow.py
backend/travel_planner/config/: config.yaml
backend/travel_planner/core/: validators.py
backend/travel_planner/prompts/: prompt_templates.py
backend/travel_planner/tools/: budget_validator.py  calculator.py  formatting.py  iternaryplaces.py  weather.py
backend/travel_planner/utils/: decorators.py  logger.py  model_loader.py  session_manager.py
config/: config.yaml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  LoadingDots.jsx  SessionItem.jsx  Sidebar.jsx  ThinkingSteps.jsx
tools/: iternaryplaces.py  weather.py
travel_planner/: __init__.py
travel_planner/prompts/: prompt_templates.py
travel_planner/tools/: __init__.py
travel_planner/utils/: config_loader.py
utils/: config_loader.py  model_loader.py
