[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel_planner"
version = "0.1.0"
description = "AI-powered trip planning agent"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["travel_planner"]
include-package-data = true